--- a/src/app/component/notification/notifications.component.html
+++ b/src/app/component/notification/notifications.component.html
@@ -5,15 +5,16 @@
 </ion-header>
 
 <ion-content>
-  <ion-list *ngIf="requests.length > 0; else empty">
-    <ion-item *ngFor="let req of requests">
+  <ion-list>
+    <ion-item *ngFor="let notif of notifications">
       <ion-label>
-        <h2>Table {{req.tableNumber}}</h2>
-        <p>{{req.message}}</p>
+        <h2>{{ notif.title }}</h2>
+        <p>{{ notif.body }}</p>
+        <small>{{ notif.createdAt?.toDate() | date:'short' }}</small>
       </ion-label>
-      <ion-button color="success" (click)="acknowledge(req)">Accept</ion-button>
     </ion-item>
   </ion-list>
+
 
   <ng-template #empty>
     <ion-text color="medium">
