--- a/src/app/component/registeration/waiter-registration.component.html
+++ b/src/app/component/registeration/waiter-registration.component.html
@@ -24,7 +24,7 @@
       </ion-item>
 
       <ion-button expand="block" color="success" type="submit" class="ion-margin-top">
-        ✅ Register
+         Register
       </ion-button>
     </form>
 
